@@ -10,3 +10,6 @@ js-script(or something other) has not loaded.
 * Fixed bug in object Minify, doit function, more processing function did not
 return final_code so changes was not saving, and clien side loaded keyBinding.js
 and cloudfunc.js full sized versions.
+
+* Changed the way Minify post-processing js-files so, from now in Minify object
+post-processing functions passed like this {'client.js': function(){}}
